Update with basic outline of goals and favicon.
Removed the 'Coming soon' image, but not from inventory
Add skeleton css for easy formatting.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,69 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
   <title>Sustainable Money</title>
+  <meta name="description" content="An exploration of what it takes - and whether it is possible -
+    to balance a strong economy with environmental and social sustainability.">
+  <meta name="author" content="Stephanie Hutson">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/index.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
 </head>
-<style>
-body {
-  background-image: url("growing-money-seeds.jpg");
-  background-repeat: repeat;
-}
-</style>
 <body>
+  <div class="container">
+    <div class="row">
+        <h4>Sustainable Money</h4>
+        <p>
+          An exploration of what it takes - and whether it is possible - to balance the
+          growth of a strong economy with environmental sustainability and social responsibility.
+        </p>
+        <p>
+          Through reading of books, academic journals, the news, and other sources I hope to
+          have a thoughtful conversation about the following topics (and more):
+        </p>
+        <ul>
+          <li>
+            What is envonmental economics and how can it be used to influence and understand
+            the impacts of human consumption?
+          </li>
+          <li>
+            If everyone were to stop hyper consermerism of single use and non-renewable goods,
+            what would happen to the economy? Globally? Locally?
+          </li>
+          <li>
+            How can the dogmas of minimalism and financial independence be used together to inform
+            a path towards environmental sustainability?
+          </li>
+          <li>
+            What is our social responsibility to consume less or more or in certain ways?
+          </li>
+        </ul>
+        <p>
+          I don't pretend to be an expert on any of these topics, nor do I expect to have an
+          unwavering answer to any of these. The goal of this site will be to have a semi-academic,
+          semi-reflective conversation about how to earn and spend money sustinablily both at a
+          micro and macro economic scale.
+        </p>
+        <p>Stay tuned for more...</p>
+
+    </div>
+  </div>
 
 </body>
 </html>
