Add blog table and first blog post

--- a/index.html
+++ b/index.html
@@ -60,8 +60,26 @@
           semi-reflective conversation about how to earn and spend money sustinablily both at a
           micro and macro economic scale.
         </p>
+        <h5>Blog... mostly book reviews so far</h5>
+        <table>
+          <thead>
+            <td class="date">Date</td>
+            <td class="title">Title</td>
+            <td class="summary">Summary</td>
+          </thead>
+          <tr>
+            <td>3/10/2020</td>
+            <td>
+              <a href="03102020-functional-inefficiency.html">A review of Peter S. Wenz’s Functional Inefficiency</a>
+            </td>
+            <td>
+              A look into Wenz's exploration of how to have a continuously growing economy that stays within the confines of our environmental resources.
+            </td>
+          </tr>
+        </table>
         <p>Stay tuned for more...</p>
-
+        <h5>Have feedback?</h5>
+        <p>Email me at <a href="mailto:stephanie.m.hutson+sustainablemoney@gmail.com">stephanie.m.hutson+sustainablemoney@gmail.com</a></p>
     </div>
   </div>
 
