update email to stephanie@sustainable.money

--- a/03102020-functional-inefficiency.html
+++ b/03102020-functional-inefficiency.html
@@ -85,7 +85,7 @@
         Overall I found Functional Inefficiency to be engaging, practical, and informative. Critics of the book might argue that an infinitely expanding economy should not be the ultimate goal, and that advocating (along with an improved health care system, public transportation system, and education system) that we expand the economy through paying for and providing services like rent-a-grandma and baby-namologists is ludicrous. It does however raise the question of if people plan to retire especially if they plan to retire early (see FIRE movement), while they themselves might not partake in spending money on things they can do themselves, how else are their investments in index funds meant to support them for decades to come? But more on that later.
       </p>
       <h5>Have feedback?</h5>
-      <p>Email me at <a href="mailto:stephanie.m.hutson+sustainablemoney@gmail.com">stephanie.m.hutson+sustainablemoney@gmail.com</a></p>
+      <p>Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a></p>
       <p><a href="index.html">Back to homepage</a></p>
     </div>
   </div>
