--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </table>
         <p>Stay tuned for more...</p>
         <h5>Have feedback?</h5>
-        <p>Email me at <a href="mailto:stephanie.m.hutson+sustainablemoney@gmail.com">stephanie.m.hutson+sustainablemoney@gmail.com</a></p>
+        <p>Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a></p>
     </div>
   </div>
 
