--- a/03102020-functional-inefficiency.html
+++ b/03102020-functional-inefficiency.html
@@ -26,9 +26,13 @@
 
 </head>
 <body>
+  <header>
+    <h3>Sustainable Money</h3>
+  </header>
   <div class="container">
     <div class="row">
       <h4>A review of Peter S. Wenz’s Functional Inefficiency</h4>
+
       <p>
         How do we reduce unemployment, increase human wellbeing, and increase the size of the economy while also staying within the confines of the American political and social environment as well as what constitutes a sustainable level of environmental resource consumption? Wenz’s Functional Inefficiency explores different strategies that have been used in the past and potential strategies that could be used in the future to achieve these goals.
       </p>
@@ -84,10 +88,16 @@
       <p>
         Overall I found Functional Inefficiency to be engaging, practical, and informative. Critics of the book might argue that an infinitely expanding economy should not be the ultimate goal, and that advocating (along with an improved health care system, public transportation system, and education system) that we expand the economy through paying for and providing services like rent-a-grandma and baby-namologists is ludicrous. It does however raise the question of if people plan to retire especially if they plan to retire early (see FIRE movement), while they themselves might not partake in spending money on things they can do themselves, how else are their investments in index funds meant to support them for decades to come? But more on that later.
       </p>
-      <h5>Have feedback?</h5>
-      <p>Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a></p>
-      <p><a href="index.html">Back to homepage</a></p>
     </div>
+    <p><a href="index.html">Back to homepage</a></p>
   </div>
+  <footer>
+    <div>
+      <p>
+        <b>Have feedback?</b></br>
+        Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
