--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 
 </head>
 <body>
+  <header>
+    <h3>Sustainable Money</h3>
+  </header>
   <div class="container">
     <div class="row">
-        <h4>Sustainable Money</h4>
         <p>
           An exploration of what it takes - and whether it is possible - to balance the
           growth of a strong economy with environmental sustainability and social responsibility.
@@ -39,11 +41,11 @@
         </p>
         <ul>
           <li>
-            What is envonmental economics and how can it be used to influence and understand
+            What is environmental economics and how can it be used to influence and understand
             the impacts of human consumption?
           </li>
           <li>
-            If everyone were to stop hyper consermerism of single use and non-renewable goods,
+            If everyone were to stop hyper consumerism of single use and non-renewable goods,
             what would happen to the economy? Globally? Locally?
           </li>
           <li>
@@ -57,7 +59,7 @@
         <p>
           I don't pretend to be an expert on any of these topics, nor do I expect to have an
           unwavering answer to any of these. The goal of this site will be to have a semi-academic,
-          semi-reflective conversation about how to earn and spend money sustinablily both at a
+          semi-reflective conversation about how to earn and spend money sustainability both at a
           micro and macro economic scale.
         </p>
         <h5>Blog... mostly book reviews so far</h5>
@@ -78,10 +80,15 @@
           </tr>
         </table>
         <p>Stay tuned for more...</p>
-        <h5>Have feedback?</h5>
-        <p>Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a></p>
     </div>
   </div>
-
+  <footer>
+    <div>
+      <p>
+        <b>Have feedback?</b></br>
+        Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
