--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 </head>
 <body>
-  <header>
+  <div class="header">
     <h3>Sustainable Money</h3>
-  </header>
+  </div>
   <div class="container">
     <div class="row">
         <p>
@@ -82,13 +82,13 @@
         <p>Stay tuned for more...</p>
     </div>
   </div>
-  <footer>
+  <div class="footer">
     <div>
       <p>
         <b>Have feedback?</b></br>
         Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
       </p>
     </div>
-  </footer>
+  </div>
 </body>
 </html>
