--- a/03102020-functional-inefficiency.html
+++ b/03102020-functional-inefficiency.html
@@ -26,9 +26,9 @@
 
 </head>
 <body>
-  <header>
+  <div class="header">
     <h3>Sustainable Money</h3>
-  </header>
+  </div>
   <div class="container">
     <div class="row">
       <h4>A review of Peter S. Wenz’s Functional Inefficiency</h4>
@@ -91,13 +91,13 @@
     </div>
     <p><a href="index.html">Back to homepage</a></p>
   </div>
-  <footer>
+  <div class="footer">
     <div>
       <p>
         <b>Have feedback?</b></br>
         Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
       </p>
     </div>
-  </footer>
+  </div>
 </body>
 </html>
