Update footer styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-  <div class="header">
+  <div id="header">
     <h3>Sustainable Money</h3>
   </div>
   <div class="container">
@@ -82,7 +82,7 @@
         <p>Stay tuned for more...</p>
     </div>
   </div>
-  <div class="footer">
+  <div id="footer">
     <div>
       <p>
         <b>Have feedback?</b></br>
