--- a/template_page.html
+++ b/template_page.html
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-  <div class="header">
+  <div id="header">
     <h3>Sustainable Money</h3>
   </div>
   <div class="container">
@@ -42,7 +42,7 @@
     </div>
     <p><a href="index.html">Back to homepage</a></p>
   </div>
-  <div class="footer">
+  <div id="footer">
     <div>
       <p>
         <b>Have feedback?</b></br>
