Attempt to remove htmls from url

--- a/03102020-functional-inefficiency/index.html
+++ b/03102020-functional-inefficiency/index.html
@@ -16,13 +16,13 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/skeleton.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="../images/favicon.png">
 
 </head>
 <body>
@@ -53,7 +53,7 @@
         </li>
       </ul>
       <div class="five columns blog-image">
-      <img src="images/functional_fundamental_efficiency_chart.svg" alt="four quadrant chart showing strategies for reduced unemployment and their fundamental and functional efficiencies">
+      <img src="../images/functional_fundamental_efficiency_chart.svg" alt="four quadrant chart showing strategies for reduced unemployment and their fundamental and functional efficiencies">
       <p id="subtext">Strategies for reduced unemployment and their fundamental and functional efficiencies</p>
       </div>
       <p>
@@ -89,7 +89,7 @@
         Overall I found Functional Inefficiency to be engaging, practical, and informative. Critics of the book might argue that an infinitely expanding economy should not be the ultimate goal, and that advocating (along with an improved health care system, public transportation system, and education system) that we expand the economy through paying for and providing services like rent-a-grandma and baby-namologists is ludicrous. It does however raise the question of if people plan to retire especially if they plan to retire early (see FIRE movement), while they themselves might not partake in spending money on things they can do themselves, how else are their investments in index funds meant to support them for decades to come? But more on that later.
       </p>
     </div>
-    <p><a href="index.html">Back to homepage</a></p>
+    <p><a href="../">Back to homepage</a></p>
   </div>
   <div id="footer">
     <div>
