--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="An exploration of what it takes - and whether it is possible -
     to balance a strong economy with environmental and social sustainability.">
   <meta name="author" content="Stephanie Hutson">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta name="Content-Type" content="text/html">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -72,7 +74,7 @@
           <tr>
             <td>3/10/2020</td>
             <td>
-              <a href="03102020-functional-inefficiency.html">A review of Peter S. Wenz’s Functional Inefficiency</a>
+              <a href="03102020-functional-inefficiency/">A review of Peter S. Wenz’s Functional Inefficiency</a>
             </td>
             <td>
               A look into Wenz's exploration of how to have a continuously growing economy that stays within the confines of our environmental resources.
