Update functional inefficiency post and update template

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div id="footer">
     <div>
       <p>
-        <b>Have feedback?</b></br>
+        <b>Have feedback or a book recommendation?</b></br>
         Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
       </p>
     </div>
