--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div id="header">
-    <h3>Sustainable Money</h3>
+    <h1>Sustainable Money</h1>
   </div>
   <div class="container">
     <div class="row">
@@ -64,13 +64,22 @@
           semi-reflective conversation about how to earn and spend money sustainability both at a
           micro and macro economic scale.
         </p>
-        <h5>Blog... mostly book reviews so far</h5>
+        <h4>Blog... mostly book reviews so far</h4>
         <table>
           <thead>
             <td class="date">Date</td>
             <td class="title">Title</td>
             <td class="summary">Summary</td>
           </thead>
+          <tr>
+            <td>3/17/2020</td>
+            <td>
+              <a href="03172020-Envi-Economics-Short-Intro/">A shorter introduction to Stephen Smith's Environmental Economics: A Very Short Introduction</a>
+            </td>
+            <td>
+              Identify and discuss key learnings from the book. A look at different strategies to entice businesses to reduce pollution, and how complexity changes as the geographical scale of an issue grows.
+            </td>
+          </tr>
           <tr>
             <td>3/10/2020</td>
             <td>
