--- a/03172020-Envi-Economics-Short-Intro/index.html
+++ b/03172020-Envi-Economics-Short-Intro/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Sustainable Money</h1>
+    <h1><a href="../">Sustainable Money</a></h1>
   </div>
   <div class="container">
     <div class="row">
