--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Sustainable Money</h1>
+    <h1><a href="/">Sustainable Money</a></h1>
   </div>
   <div class="container">
     <div class="row">
