Add a review of a world with three zeros

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
             <td class="summary">Summary</td>
           </thead>
           <tr>
+            <td>4/8/2020</td>
+            <td>
+              <a href="04082020-World-of-three-zeros/">A look at Social Businesses</a>
+            </td>
+            <td>
+              A review of the book <u>A World of Three Zeros</u>, a book about how to end poverty through a selfless rather than capitalistic model, but mostly about how the author attributes any successes on the matter to himself.
+            </td>
+          </tr>
+          <tr>
             <td>3/27/2020</td>
             <td>
               <a href="03272020-Project-Drawdown/">The Drawdown, a list of things that might actually work</a>
