--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
             <td class="summary">Summary</td>
           </thead>
           <tr>
+            <td>4/15/2020</td>
+            <td>
+              <a href="calculating-the-carbon-footprint-of-bananas-and-coffee/">How Bad is my Coffee?</a>
+            </td>
+            <td>
+              Inspired by reading Mike Berners-Lee's <u>How Bad Are Bananas?</u>, I take a deep dive into the carbon cost of a 12oz cup of coffee.
+            </td>
+          </tr>
+          <tr>
             <td>4/8/2020</td>
             <td>
               <a href="04082020-World-of-three-zeros/">A look at Social Businesses</a>
