--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -52,8 +52,8 @@
           </thead>
           <tr>
             <td><img src="../images/percolator.jpg" alt="A stove top percalator"></td>
-            <td><img src="../images/pourover.jpg" alt="A reusable mug of coffee"></td>
-            <td><img src="../images/disposable.jpg" alt="A disposable cup of coffee from a store"></td>
+            <td><img src="../images/pourover-mug.jpg" alt="A reusable mug of coffee"></td>
+            <td><img src="../images/disposable-mug.jpg" alt="A disposable cup of coffee from a store"></td>
           </tr>
           <tr>
             <td colspan="3">Heating water + drinking vessel + production + waste ( + storefront cost )</td>
