--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
   </div>
   <div id="footer">
     <div>
+      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCxJvFGKDJYONXdORrs3t9QCA90hqs6BSQ8SR0iXGYhKoguQ/viewform?usp=sf_link">Sign up for our email list!</a></p>
       <p>
-        <b>Have feedback or a book recommendation?</b></br>
-        Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
+        <b>Have feedback or a book recommendation?</b> Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
       </p>
     </div>
   </div>
