--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -23,6 +23,15 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KW1FBHGEPN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KW1FBHGEPN');
+  </script>
 
 </head>
 <body>
