update blog post titles and add google analytics

--- a/03102020-functional-inefficiency/index.html
+++ b/03102020-functional-inefficiency/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Sustainable Money - blog</title>
+  <title>Sustainable Money - Functional Inefficiency</title>
   <meta name="description" content="An exploration of what it takes - and whether it is possible -
     to balance a strong economy with environmental and social sustainability.">
   <meta name="author" content="Stephanie Hutson">
@@ -23,6 +23,15 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.png">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KW1FBHGEPN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KW1FBHGEPN');
+  </script>
 
 </head>
 <body>
