--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Sustainable Money - blog</title>
+  <title>Sustainable Money - How bad is my coffee?</title>
   <meta name="description" content="An exploration of what it takes - and whether it is possible -
     to balance a strong economy with environmental and social sustainability.">
   <meta name="author" content="Stephanie Hutson">
