Add image to metadata for how bad is coffee

--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Sustainable Money - How bad is my coffee?</title>
-  <meta name="description" content="An exploration of what it takes - and whether it is possible -
-    to balance a strong economy with environmental and social sustainability.">
+  <meta name="description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?">
+  <meta property="og:image" content="http://sustainably.money/images/pourover-mug.jpg">
   <meta name="author" content="Stephanie Hutson">
 
   <!-- Mobile Specific Metas
