Retry on image tag for meta data

--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <title>Sustainable Money - How bad is my coffee?</title>
   <meta name="description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?">
-  <meta property="og:image" content="http://sustainable.money/images/pourover-mug.jpg">
+  <meta property="og:image" content="//sustainable.money/images/pourover-mug.jpg">
   <meta property="og:title" content="How Bad is my Coffee?">
   <meta property="og:description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?">
   <meta name="author" content="Stephanie Hutson">
