Add long haul flight magnitude to how bad is my coffee

--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -10,6 +10,9 @@
   <meta property="og:image" content="//sustainable.money/images/pourover-mug.jpg"/>
   <meta property="og:title" content="How Bad is my Coffee?"/>
   <meta property="og:description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?"/>
+  <meta property="twitter:image" content="//sustainable.money/images/pourover-mug.jpg"/>
+  <meta property="twitter:title" content="How Bad is my Coffee?"/>
+  <meta property="twitter:description" content="A look into the carbon efficency of making a cup of coffee and a breif review of the book How Bad are Bananas?"/>
   <meta name="author" content="Stephanie Hutson"/>
 
   <!-- Mobile Specific Metas
@@ -49,7 +52,7 @@
           Reading <u>How Bad are Bananas?</u> was enjoyable, quick and a good reference when thinking about the choices I make and how they impact my overall carbon footprint. The author does a combination of looking at very specific figures gotten from highly tuned sources to making rough estimations based on things that we don't really know how exactly to calculate. It is worth noting the book came out 10 years ago next month, so when he talks about changing light bulbs, we already did that! There are other places where we have made big strides in sustainability in the last 10 years that are worth mentioning, like the portion of renewable resources that are used for electricity and the proliferation of e-readers.
         </p>
         <p>
-          One thing that Berners-Lee is a little inconsistent with (although in many places he admits it) is when he does and does not include the complete cost of production of an item, and when he is considering the impact of the profit made <i>by the seller</i> as an impact. His main point is the order of magnitude of the carbon impact a single event or item consumed will have rather than exact number of grams of carbon-dioxide equivalent<sup><a href="#1">1</a></sup> (hereafter CO<sub>2</sub> e) that are consumed. A cup of coffee for instance, is an order of magnitude less expensive than a paperback book, and an order of magnitude greater than an email with an image or two attached.
+          One thing that Berners-Lee is a little inconsistent with (although in many places he admits it) is when he does and does not include the complete cost of production of an item, and when he is considering the impact of the profit made <i>by the seller</i> as an impact. His main point is the order of magnitude of the carbon impact a single event or item consumed will have rather than exact number of grams of carbon-dioxide equivalent<sup><a href="#1">1</a></sup> (hereafter CO<sub>2</sub> e) that are consumed. A cup of coffee for instance, is an order of magnitude less expensive than a paperback book, and an order of magnitude greater than an email with an image or two attached, and 4 orders of magnitude smaller than a long haul flight.
         </p>
         <p>
           I could go on about the things I thought were done well verse what I felt could do better, but I'm instead going to change things up. Rather than continuing to dive into a full on book review, I want to, using the calculations that Berners-Lee has provided as well as some additional resources I've scoured off the internet, take a closer look at the impact of a 12oz cup of coffee.
