Add about page and books read page and update CSS

--- a/03172020-Envi-Economics-Short-Intro/index.html
+++ b/03172020-Envi-Economics-Short-Intro/index.html
@@ -39,8 +39,23 @@
 </head>
 <body>
   <div id="header">
-    <h1><a href="../">Sustainable Money</a></h1>
+    <div>
+      <a href="/">Sustainable Money</a>
+    </div>
   </div>
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Main</a>
+      </li>
+      <li>
+        <a href="/about/">About</a>
+      </li>
+      <li>
+        <a href="/books-so-far/">Books Read So Far</a>
+      </li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="row">
       <h4>A shorter introduction to Stephen Smith's </br><a href="https://www.google.com/books/edition/Environmental_Economics_A_Very_Short_Int/4pwuO2B84H4C">Environmental Economics: A Very Short Introduction</a></h4>
