--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -45,8 +45,23 @@
 </head>
 <body>
   <div id="header">
-    <h1><a href="../">Sustainable Money</a></h1>
+    <div>
+      <a href="/">Sustainable Money</a>
+    </div>
   </div>
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Main</a>
+      </li>
+      <li>
+        <a href="/about/">About</a>
+      </li>
+      <li>
+        <a href="/books-so-far/">Books Read So Far</a>
+      </li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="row">
       <h4>How bad is my coffee?</h4>
