--- a/03102020-functional-inefficiency/index.html
+++ b/03102020-functional-inefficiency/index.html
@@ -39,8 +39,23 @@
 </head>
 <body>
   <div id="header">
-    <h1><a href="../">Sustainable Money</a></h1>
+    <div>
+      <a href="/">Sustainable Money</a>
+    </div>
   </div>
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Main</a>
+      </li>
+      <li>
+        <a href="/about/">About</a>
+      </li>
+      <li>
+        <a href="/books-so-far/">Books Read So Far</a>
+      </li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="row">
       <h4>A review of Peter S. Wenz’s <a href="https://books.google.com/books/about/Functional_Inefficiency.html?id=zbVvDwAAQBAJ">Functional Inefficiency</a></h4>
