--- a/index.html
+++ b/index.html
@@ -40,10 +40,25 @@
   </script>
 
 </head>
-<body>
+<body class='homepage'>
   <div id="header">
-    <h1><a href="/">Sustainable Money</a></h1>
+    <div>
+      <a href="/">Sustainable Money</a>
+    </div>
   </div>
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Main</a>
+      </li>
+      <li>
+        <a href="about/">About</a>
+      </li>
+      <li>
+        <a href="books-so-far/">Books Read So Far</a>
+      </li>
+    </ul>
+  </nav>
   <div class="container">
     <div class="row">
         <p>
