Add dogmas of financial independence

--- a/about/index.html
+++ b/about/index.html
@@ -66,7 +66,7 @@
   <div class="container">
     <div class="row">
       <div class="blog-image five columns u-pull-right">
-        <img src="../images/me_reading.jpg"/>
+        <img src="../images/me_reading.jpg" alt="picture of me reading with coffee"/>
         <p id="subtext">Though reading Jane Austen's Northanger Abbey in this picture, I like to think I concentrate as hard on the sustainability books I've been consuming as I look like I am here.</p>
       </div>
       <h1>What is this site all about?</h1>
