--- a/books-so-far/index.html
+++ b/books-so-far/index.html
@@ -60,7 +60,7 @@
     <div class="row">
       <h1>Books that I've read so far</h1>
       <div class="blog-image four columns u-pull-right">
-        <img src="../images/me_reading.jpg"/>
+        <img src="../images/me_reading.jpg" alt="picture of me reading with coffee"/>
         <p id="subtext">Though reading Jane Austen's Northanger Abbey in this picture, I like to think I concentrate as hard on the sustainability books I've been consuming as I look like I am here.</p>
       </div>
       <div class="tablish seven columns">
