--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
             <td class="summary">Summary</td>
           </thead>
           <tr>
+            <td>4/23/2020</td>
+            <td>
+              <a href="dogmas-of-financial-independence/">Dogmas of the FIRE Movement</a>
+            </td>
+            <td>
+              A discussion on what is the FIRE Movement as well as a few thoughts on what it would mean if everyone were to be a part of it.
+            </td>
+          </tr>
+          <tr>
             <td>4/15/2020</td>
             <td>
               <a href="calculating-the-carbon-footprint-of-bananas-and-coffee/">How Bad is my Coffee?</a>
