Add signup form with sendgrid

--- a/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
+++ b/calculating-the-carbon-footprint-of-bananas-and-coffee/index.html
@@ -183,7 +183,7 @@
   </div>
   <div id="footer">
     <div>
-      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeCxJvFGKDJYONXdORrs3t9QCA90hqs6BSQ8SR0iXGYhKoguQ/viewform?usp=sf_link">Sign up for our email list!</a></p>
+      <p><a href="signup/">Sign up for our email list!</a></p>
       <p>
         <b>Have feedback?</b> Email me at <a href="mailto:stephanie@sustainable.money">stephanie@sustainable.money</a>
       </p>
