--- a/dogmas-of-financial-independence/index.html
+++ b/dogmas-of-financial-independence/index.html
@@ -8,10 +8,11 @@
   <title>Sustainable Money - FIRE</title>
   <meta name="description" content="A look into the dogmas of financial independence and some of its limitations.">
   <meta name="author" content="Stephanie Hutson">
-  <meta property="og:image" content="http//:sustainable.money/images/spilling_pennies.jpg"/>
+  <meta property="og:image" content="http://sustainable.money/images/spilling_pennies.jpg"/>
   <meta property="og:title" content="Dogmas of the FIRE Movement"/>
+  <meta property="og:url" content="http://sustinable.money/dogmas-for-financial-independence/" />
   <meta property="og:description" content="A look into the dogmas of financial independence and some of its limitations."/>
-  <meta property="twitter:image" content="http//:sustainable.money/images/spilling_pennies.jpg"/>
+  <meta property="twitter:image" content="http://sustainable.money/images/spilling_pennies.jpg"/>
   <meta property="twitter:title" content="Dogmas of the FIRE Movement"/>
   <meta property="twitter:description" content="A look into the dogmas of financial independence and some of it's limitations."/>
   <meta name="author" content="Stephanie Hutson"/>
