Add Income Inequality and The Inner Level

--- a/books-so-far/index.html
+++ b/books-so-far/index.html
@@ -99,6 +99,11 @@
           <p class="rating">⭐⭐⭐</p>
           <p class="recommendation">A fun informal read, but has the same problem as Project Drawdown with repetitiveness without the same degree of scientific rigor.</p>
         </div>
+        <div class="book">
+          <p class="title">The Inner Level</p>
+          <p class="rating">⭐⭐⭐</p>
+          <p class="recommendation">The book seems to lean heavily on the success of the authors previous book The Spirit Level, and provides a heavily biased argument about what makes income inequality so bad. Although I agree that income inequality is indeed not good for a healthy and happy society, there are several leaps made that offer a bit to be desired (it seems like a bit of a leap to say that cleaning one's house before visitors arrive is an indicator of how income inequality makes us want to hide who we really are). That being said, it was an engaging, albeit at times choppy, read that highlighted correlations (though it neglects to provide degrees of correlations) between income inequality and other problems found in modern society.</p>
+        </div>
       </div>
     </div>
   </div>
