--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
             <td class="summary">Summary</td>
           </thead>
           <tr>
+            <td>5/1/2020</td>
+            <td>
+              <a href="the-inner-level-and-inequality/">Income Inequality and The Inner Level</a>
+            </td>
+            <td>
+              A look into some of the potential causes of the rise of income inequality beginning in the 1970s with the social and economic impacts outlined in the 2018 book <u>The Inner Level</u>.
+            </td>
+          </tr>
+          <tr>
             <td>4/23/2020</td>
             <td>
               <a href="dogmas-of-financial-independence/">Dogmas of the FIRE Movement</a>
