Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -84,7 +84,7 @@
       </p>
       <h2>About Me</h2>
       <p>
-        I've got several interests, not least of all are personal finance, environmental sustainability, and socio-economic equality. I'm attracted to the concepts of financial independence (and the FIRE movement) and minimalism, and think in a lot of ways most people's lives could be improved by reducing the level of consumerism that runs rampant in the United States.
+        Professionally, I am a software engineer, though studied archeology and environmental science in school. In my personal life, I've got several interests, not least of all are personal finance, environmental sustainability, and socio-economic equality. I'm attracted to the concepts of financial independence (and the FIRE movement) and minimalism, and think in a lot of ways most people's lives could be improved by reducing the level of consumerism that runs rampant in the United States.
       </p>
       <p>
         I personally buy several things used, don't own a car and am hoping to be able to continue to not need one (full disclosure, my partner does, but I ride in it about once every other week, otherwise I take the bus). We've invested in a backyard compost tumbler, and the average age of all my clothes is about 5 years - some things are more like 15 years old. My big brown CO<sub>2</sub> cloud hanging over my attempt at living an environmentally sustainable lifestyle is air travel. I love to travel and see the world, and my family lives 3000 miles away - my partner's family even farther.
