Add two new book reviews

--- a/books-so-far/index.html
+++ b/books-so-far/index.html
@@ -79,6 +79,8 @@
           <p class="rating">⭐⭐⭐⭐⭐</p>
           <p class="recommendation">An interesting journalistic read about the winners and losers of climate change. The author provides a reasonably balance perspective and some valuable insights into the experiences of others.</p>
         </div>
+      </div>
+      <div class="tablish ten columns">
         <div class="book">
           <p class="title">Functional Inefficiency</p>
           <p class="rating">⭐⭐⭐⭐⭐</p>
@@ -103,6 +105,16 @@
           <p class="title">The Inner Level</p>
           <p class="rating">⭐⭐⭐</p>
           <p class="recommendation">The book seems to lean heavily on the success of the authors previous book The Spirit Level, and provides a heavily biased argument about what makes income inequality so bad. Although I agree that income inequality is indeed not good for a healthy and happy society, there are several leaps made that offer a bit to be desired (it seems like a bit of a leap to say that cleaning one's house before visitors arrive is an indicator of how income inequality makes us want to hide who we really are). That being said, it was an engaging, albeit at times choppy, read that highlighted correlations (though it neglects to provide degrees of correlations) between income inequality and other problems found in modern society.</p>
+        </div>
+        <div class="book">
+          <p class="title">The Passion Economy</p>
+          <p class="rating">⭐⭐</p>
+          <p class="recommendation">This is a book about bosses. It starts out well in identifying and describing the way that businesses can and need to rethink they're product in order to remain successful in an increasingly globalized world (hint: take your self out of the competition and do something you're uniquely qualified to do). After a strong start, it dives into several individual stories about people who run businesses - many of whom inherited their business from a parent and managed to make it work, and then finishes off oddly with a dive into a technology used by a fast food company to manufacture empathy in the workplace using AI. Even forgiving the unexpected flow of the book, it does well to undermine the value of people who "do the boring work" that keeps the ship afloat, which is to say it felt like if you're not in a situation to be able to create some passion based business for yourself, your work is not viewed as important. The book is not without merit, but overall feel a little flat.</p>
+        </div>
+        <div class="book">
+          <p class="title">The Big Short</p>
+          <p class="rating">⭐⭐⭐⭐</p>
+          <p class="recommendation">Michael Lewis is a talented author who is skilled at finding and describing interesting people in interesting situations, and the 2008 financial crisis was certainly an interesting situation. While I feel like he missed an opportunity or two to describe a few interesting women who were in the room at the time - women where mentioned in the book lack personalities and exist mostly as wives and sometimes as nameless voices on the other end of the phone until they are given names nearly 200 pages into the book and then promptly forgotten on the very next page. Despite this, I enjoyed reading the book not just as a narrative and a history, but as a way to better understand what had actually happened to the housing and bond market leading up to the Great Recession. I appreciate the effort that Lewis made both in the concluding chapters of the book as well as the epilogue to emphasize that this is not a happy story. The people that got rich from betting against the housing market aren't extremely happy about it, and the people that screwed over millions of Americans mostly came out of it all filthy rich anyway.</p>
         </div>
       </div>
     </div>
