Add Reopening sustainably

--- a/index.html
+++ b/index.html
@@ -100,6 +100,24 @@
             <td class="summary">Summary</td>
           </thead>
           <tr>
+            <td>9/03/2020</td>
+            <td>
+              <a href="Reopening-sustainably/">Reopening Sustainably after COVID-19</a>
+            </td>
+            <td>
+              An optimistic proposal on what we can do and think about when we go to reopen the nation.
+            </td>
+          </tr>
+          <tr>
+            <td>5/1/2020</td>
+            <td>
+              <a href="the-inner-level-and-inequality/">Income Inequality and The Inner Level</a>
+            </td>
+            <td>
+              A look into some of the potential causes of the rise of income inequality beginning in the 1970s with the social and economic impacts outlined in the 2018 book <u>The Inner Level</u>.
+            </td>
+          </tr>
+          <tr>
             <td>5/10/2020</td>
             <td>
               <a href="100-companies-and-misleading-carbon-attribution/">100 Companies and the Emissions They're Supposed to be Responsible For</a>
