--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <tr>
             <td>9/03/2020</td>
             <td>
-              <a href="Reopening-sustainably/">Reopening Sustainably after COVID-19</a>
+              <a href="Reopening-Sustainably/">Reopening Sustainably after COVID-19</a>
             </td>
             <td>
               An optimistic proposal on what we can do and think about when we go to reopen the nation.
