esg investments funds

--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
             <td class="summary">Summary</td>
           </thead>
           <tr>
+            <td>10/05/2020</td>
+            <td>
+              <a href="are-esg-investments-what-you-expect/">Sustainable Investing and ESG funds</a>
+            </td>
+            <td>
+              A hard look at what is the typical fund touted as Sustainable investing, and considerations as to whether
+              they are helping an investor achieve their goals.
+            </td>
+          </tr>
+          <tr>
             <td>9/03/2020</td>
             <td>
               <a href="Reopening-Sustainably/">Reopening Sustainably after COVID-19</a>
