--- a/template_page.html
+++ b/template_page.html
@@ -9,10 +9,18 @@
   <meta name="description" content="An exploration of what it takes - and whether it is possible -
     to balance a strong economy with environmental and social sustainability.">
   <meta name="author" content="Stephanie Hutson">
+  <meta property="og:image" content="http://sustainable.money/images/productivity_vs_pay.png"/>
+  <meta property="og:title" content="Income Inequality and The Inner Level"/>
+  <meta property="og:description" content="A look into some of the potential causes of the rise of income inequality beginning in the 1970s with the social and economic impacts outlined in the 2018 book The Inner Level."/>
+  <meta property="twitter:image" content="//sustainable.money/images/productivity_vs_pay.png"/>
+  <meta property="twitter:title" content="Income Inequality and The Inner Level"/>
+  <meta property="twitter:description" content="A look into some of the potential causes of the rise of income inequality beginning in the 1970s with the social and economic impacts outlined in the 2018 book The Inner Level."/>
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
@@ -49,10 +57,10 @@
         <a href="/">Main</a>
       </li>
       <li>
-        <a href="about/">About</a>
+        <a href="/about/">About</a>
       </li>
       <li>
-        <a href="books-so-far/">Books Read So Far</a>
+        <a href="/books-so-far/">Books Read So Far</a>
       </li>
     </ul>
   </nav>
